<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.sanderjurgens</groupId>
    <artifactId>volvis</artifactId>
    <version>1.1</version>
    <packaging>jar</packaging>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>        
        <exec.mainClass>com.sanderjurgens.volvis.gui.MainFrame</exec.mainClass>
    </properties>
    <name>VolVis</name>
    <description>Volume visualization</description>
    <dependencies>
        <dependency>
            <groupId>org.jogamp.gluegen</groupId>
            <artifactId>gluegen-rt-main</artifactId>
            <version>2.5.0</version>
        </dependency>
        <dependency>
            <groupId>org.jogamp.jogl</groupId>
            <artifactId>jogl-all-main</artifactId>
            <version>2.5.0</version>
        </dependency>
    </dependencies>
    <repositories>
        <repository>
            <id>jogamp-remote</id>
            <name>jogamp mirror</name>
            <url>https://www.jogamp.org/deployment/maven/</url>
        </repository>
    </repositories>
    <build>
        <plugins>            
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.3.0</version>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>${exec.mainClass}</mainClass>
                            <addClasspath>true</addClasspath>
                            <classpathPrefix>../lib/</classpathPrefix>                          
                        </manifest>
                        <manifestEntries>
                            <Add-Exports>java.base/java.lang java.desktop/sun.awt java.desktop/sun.java2d</Add-Exports>
                        </manifestEntries>
                    </archive>
                </configuration>             
                <executions>
                    <execution>
                        <phase>package</phase>
                    </execution>
                </executions>
            </plugin>            
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.5.2</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <outputFile>target/${project.artifactId}-${project.version}-fat.jar</outputFile>
                            <createDependencyReducedPom>false</createDependencyReducedPom>
                            <transformers>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <manifestEntries>
                                        <Main-Class>${exec.mainClass}</Main-Class>
                                        <Class-Path></Class-Path>
                                        <Add-Exports>java.base/java.lang java.desktop/sun.awt java.desktop/sun.java2d</Add-Exports>
                                    </manifestEntries>
                                </transformer>
                            </transformers>                            
                            <filters>
                                <filter>
                                   <artifact>org.jogamp.jogl:*</artifact>
                                   <excludes>
                                      <exclude>META-INF/*.MF</exclude>
                                   </excludes>
                                </filter>
                                <filter>
                                   <artifact>org.jogamp.gluegen:*</artifact>
                                   <excludes>
                                      <exclude>META-INF/*.MF</exclude>
                                   </excludes>
                                </filter>
                                <filter>
                                   <artifact>antlr:*</artifact>
                                   <excludes>
                                      <exclude>META-INF/*.MF</exclude>
                                   </excludes>
                                </filter>
                            </filters>
                        </configuration>
                    </execution>
                </executions>
              </plugin>
              <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>3.6.1</version>
                 <configuration>
                  <outputDirectory>${project.basedir}/lib</outputDirectory>
                </configuration>
                <executions>
                  <execution>
                    <phase>install</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.2.0</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <executable>java</executable>
                    <arguments>                        
                        <argument>--add-exports</argument>
                        <argument>java.base/java.lang=ALL-UNNAMED</argument>
                        <argument>--add-exports</argument>
                        <argument>java.desktop/sun.awt=ALL-UNNAMED</argument>
                        <argument>--add-exports</argument>
                        <argument>java.desktop/sun.java2d=ALL-UNNAMED</argument>    
                        <argument>-classpath</argument>
                        <classpath />
                        <argument>${exec.mainClass}</argument>                 
                    </arguments>                    
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.6.3</version>
                <configuration>
                    <reportOutputDirectory>${project.basedir}</reportOutputDirectory>
                    <destDir>docs</destDir>                  
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>